--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -9,6 +9,7 @@
   font-size: 1rem;
   .text--line-height-4();
   white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
 
 .MessagingBubble--Message--Other {
@@ -20,6 +21,14 @@
   font-size: 1rem;
   .text--line-height-4();
   white-space: pre-wrap;
+}
+
+.MessagingBubble--Link,
+.MessagingBubble--Link:focus,
+.MessagingBubble--Link:hover {
+  color: inherit;
+  .text--semi-bold();
+  .text--underline();
 }
 
 // For mobile/tablet
