Update documentation to show support for links in messaging bubbles

--- a/components/MessagingBubbleView.less
+++ b/components/MessagingBubbleView.less
@@ -8,6 +8,10 @@
   .text--italic();
 }
 
+.MessagingBubbleView--bubble {
+  .margin--bottom--l();
+}
+
 .MessagingBubbleView--configContainer {
   .border--top--l(@neutral_silver);
   .margin--top--xl;
