Adding field for single actions

--- a/src/Table2Beta/Table.less
+++ b/src/Table2Beta/Table.less
@@ -52,7 +52,9 @@
   // Remove this background-color styling when Table2Beta replaces Table
   background-color: #f3f5fd;
   cursor: pointer;
-  .Table2Beta--individualActions {visibility: visible;}
+  .Table2Beta--individualActions {
+    visibility: visible;
+  }
 }
 
 .Table2Beta--individualActions {
