--- a/docs/components/MessagingInputView.less
+++ b/docs/components/MessagingInputView.less
@@ -15,15 +15,11 @@
 }
 
 .MessagingInputView--config {
-  .flexbox;
-  .items--center;
-  .margin--bottom--m;
-  .text--caps;
   .text--small;
-
-  &:not(:last-child) {
-    .margin--right--m;
-  }
+  cursor: pointer;
+  display: inline-block;
+  .margin--y--m();
+  text-transform: uppercase;
 }
 
 label.MessagingInputView--config {
