lint/make test errors

--- a/src/Table2Beta/HeaderCell.less
+++ b/src/Table2Beta/HeaderCell.less
@@ -28,7 +28,7 @@
 
 .Table--header--cell--sort_icons {
   fill: darken(@neutral_silver, 5%);
-  margin-left: 5px;
+  margin-left: 0.3125rem;
   transition: fill 0.25s ease-out;
   vertical-align: middle;
 
