--- a/src/Table2Beta/Table.less
+++ b/src/Table2Beta/Table.less
@@ -6,11 +6,11 @@
   font-family: "Proxima Nova";
   font-size: 0.875rem;
   width: 100%;
-  max-width: 1032px;
+  max-width: 64.5rem;
 }
 
 .Table2Beta--header {
-  height: 56px;
+  height: @size_4xl;
 }
 
 &.Table2Beta--fixed {
@@ -30,7 +30,7 @@
 .Table2Beta--row {
   .border--bottom--s(@neutral_silver);
   transition: background-color @timingImmediately @motionSmooth;
-  min-height: 48px;
+  min-height: @size_3xl;
 }
 
 .Table2Beta--rowEven {
