fixed focus state and double onclick

--- a/src/Table2Beta/SelectedRowsHeader.less
+++ b/src/Table2Beta/SelectedRowsHeader.less
@@ -15,14 +15,6 @@
   font-family: "Proxima Nova";
 }
 
-// .Table2Beta--selectedRowsHeader--titleCell {
-// padding: 0.75rem;
-// }
-
-// .Table2Beta--selectedRowsHeader--actionsCell {
-// padding: 0.75rem;
-// }
-
 .Table2Beta--selectedRowsHeader--actionsFlexbox {
   flex-wrap: wrap;
   margin-top: -1rem;
@@ -76,6 +68,11 @@
   background-color: #f6f7fe;
   color: #2f4ca9;
 }
+
+// .Table2Beta--selectedRowsHeader--actionMenu ul:hover {
+//   background-color: none;
+//   color: @primary_blue;
+// }
 
 .Table2Beta--selectedRowsHeader--actionMenu--trigger {
   vertical-align: middle;
