Improve mobile bubble styling

--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -41,5 +41,7 @@
     font-size: 0.875rem;
     line-height: 1rem;
     .padding--xs();
+    // This improves how long words/links are broken on Chrome mobile and doesn't affect Safari
+    overflow-wrap: anywhere;
   }
 }
