--- a/src/MessagingThreadHistory/MessageMetadata.less
+++ b/src/MessagingThreadHistory/MessageMetadata.less
@@ -31,17 +31,19 @@
 }
 
 .MessageMetadata--Timestamp--right {
-  .margin--right--xs();
-  font-size: 0.875rem;
-  .text--line-height-1();
   color: @neutral_medium_gray;
+  font-size: 0.875rem;
+  .margin--right--xs();
+  .text--line-height-1();
+  white-space: nowrap;
 }
 
 .MessageMetadata--Timestamp--left {
-  .margin--left--xs();
-  font-size: 0.875rem;
-  .text--line-height-1();
   color: @neutral_medium_gray;
+  font-size: 0.875rem;
+  .margin--left--xs();
+  .text--line-height-1();
+  white-space: nowrap;
 }
 
 // For mobile/tablet
