Fixed dropdown button menu buttons from being transparent on hover

--- a/src/DropdownButton/Menu.less
+++ b/src/DropdownButton/Menu.less
@@ -62,3 +62,7 @@
 .Button.DropdownButton--WhiteBackground {
   background: white;
 }
+
+.Button.DropdownButton--WhiteBackground:hover {
+  background: white;
+}
