Add IE support for breaking long words

--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -10,6 +10,7 @@
   .padding--xs();
   .text--line-height-4();
   white-space: pre-wrap;
+  word-wrap: break-word; // IE name for overflow-wrap
 }
 
 .MessagingBubble--Message--Other {
@@ -22,6 +23,7 @@
   .padding--xs();
   .text--line-height-4();
   white-space: pre-wrap;
+  word-wrap: break-word; // IE name for overflow-wrap
 }
 
 .MessagingBubble--Link,
