--- a/src/Table2Beta/Table.less
+++ b/src/Table2Beta/Table.less
@@ -61,3 +61,19 @@
   visibility: hidden;
   align-items: center;
 }
+
+.Table2Beta--actionIcon {
+  display: inline-block;
+  height: 1.5rem;
+  width: 1.25rem;
+  margin-right: 0.3125rem;
+  vertical-align: middle;
+}
+
+.Table2Beta--actionTitle {
+  display: inline-block;
+  .text--medium;
+  .text--semi-bold;
+  font-family: "Proxima Nova";
+  vertical-align: middle;
+}
