--- a/src/Table2Beta/Table.less
+++ b/src/Table2Beta/Table.less
@@ -47,9 +47,61 @@
   background-color: #f3f5fd;
 }
 
+.Table2Beta--individualActions {
+  visibility: hidden;
+  align-items: center;
+}
+
 &.Table2Beta--clickable_row:hover {
   // For whatever reason, the original Table's color style is used in Table2Beta as well.
   // Remove this background-color styling when Table2Beta replaces Table
   background-color: #f3f5fd;
   cursor: pointer;
+
+  .Table2Beta--individualActions {
+    visibility: visible;
+  }
+}
+
+.Table2Beta--actions--icon {
+  display: inline-block;
+  height: 1.5rem;
+  width: 1.25rem;
+  margin-right: 0.3125rem;
+  vertical-align: middle;
+}
+
+.Table2Beta--actions--title {
+  display: inline-block;
+  .text--medium;
+  .text--semi-bold;
+  font-family: "Proxima Nova";
+  vertical-align: middle;
+}
+
+.Table2Beta--actions--menu {
+  margin: 0.5rem 0 0 0.5rem;
+  padding: 0.375rem 0 0.625rem 0;
+  width: 1.25rem;
+  text-align: center;
+  color: @primary_blue;
+  cursor: pointer;
+  border-radius: 0.25rem;
+}
+
+.Table2Beta--actions--menu:hover {
+  background-color: #f6f7fe;
+  color: #2f4ca9;
+}
+
+.Table2Beta--actions--menu--trigger {
+  vertical-align: middle;
+}
+
+.Table2Beta--action--menu--item img {
+  vertical-align: middle;
+}
+
+.Table2Beta--action--menu--item--title {
+  line-height: 1.5rem;
 }
