Styles for mobile friendliness

--- a/src/Table2Beta/SelectedRowsHeader.less
+++ b/src/Table2Beta/SelectedRowsHeader.less
@@ -13,9 +13,7 @@
   background-color: @neutral_off_white;
   color: @neutral_dark_gray;
   font-family: "Proxima Nova";
-  // Max-width of the table is 64.5rem
-  // The max-width here is 64.5rem - 2*1rem (padding left and right) - 2*0.0625rem (border width)
-  max-width: 62.375rem;
+  width: 100%;
 }
 
 .Table2Beta--selectedRowsHeader--actionsFlexbox {
