Fix SelectedRowsHeader for mobile

--- a/src/Table2Beta/SelectedRowsHeader.less
+++ b/src/Table2Beta/SelectedRowsHeader.less
@@ -1,7 +1,7 @@
 @import (reference) "../less/utilities.less";
 
 .Table2Beta--selectedRowsHeader {
-  height: 1.5rem;
+  height: 3.5rem;
   line-height: 1.5rem;
   .border--s(@neutral_silver);
   .borderRadius--top--l;
@@ -14,6 +14,7 @@
   color: @neutral_dark_gray;
   font-family: "Proxima Nova";
   width: 100%;
+  box-sizing: border-box;
 }
 
 .Table2Beta--selectedRowsHeader--actionsFlexbox {
