Add an external label for MessagingInput, remove placeholder

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -2,6 +2,11 @@
 
 .MessagingInput--Container {
   position: relative;
+  .margin--top--2xs();
+}
+
+.MessagingInput--TextFieldLabel {
+  color: @neutral_medium_gray;
 }
 
 .MessagingInput--TextField {
