Push the label into the MessageInput--Container

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -2,7 +2,11 @@
 
 .MessagingInput--Container {
   position: relative;
+}
+
+.MessagingInput--InnerContainer {
   .margin--top--2xs();
+  width: 100%;
 }
 
 .MessagingInput--TextFieldLabel {
