Move margin to label

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -5,12 +5,12 @@
 }
 
 .MessagingInput--InnerContainer {
-  .margin--top--2xs();
   width: 100%;
 }
 
 .MessagingInput--TextFieldLabel {
   color: @neutral_medium_gray;
+  .margin--bottom--2xs();
 }
 
 .MessagingInput--TextField {
