--- a/src/Table2Beta/SelectedRowsHeader.less
+++ b/src/Table2Beta/SelectedRowsHeader.less
@@ -25,10 +25,7 @@
 }
 
 .Table2Beta--selectedRowsHeader--action {
-  margin: 0.5rem 0.5rem 0 0;
-  cursor: pointer;
-  padding: 0.5rem;
-  border-radius: 0.25rem;
+  margin: 0.5rem 0 0 0;
 }
 
 .Table2Beta--selectedRowsHeader--action:last-of-type {
