--- a/src/Table2Beta/Table.less
+++ b/src/Table2Beta/Table.less
@@ -50,15 +50,19 @@
   align-items: center;
 }
 
+.Table2Beta--selectable_row:hover {
+  background-color: @neutral_off_white;
+
+  .Table2Beta--singleActions {
+    visibility: visible;
+  }
+}
+
 &.Table2Beta--clickable_row:hover {
   // For whatever reason, the original Table's color style is used in Table2Beta as well.
   // Remove this background-color styling when Table2Beta replaces Table
   background-color: @neutral_off_white;
   cursor: pointer;
-
-  .Table2Beta--singleActions {
-    visibility: visible;
-  }
 }
 
 .Table2Beta--singleActionTrigger {
