Table2Beta: QoL Changes! (#547)
* Remove table size constriction

* With table container gone, SelectedRowsHeader needs to change

* SelectedRowsHeader uses buttons

* Row doesn't have to be clickable to use checkbox and single actions

* Version bump

--- a/src/Table2Beta/SelectedRowsHeader.less
+++ b/src/Table2Beta/SelectedRowsHeader.less
@@ -1,7 +1,7 @@
 @import (reference) "../less/utilities.less";
 
 .Table2Beta--selectedRowsHeader {
-  height: 3.5rem;
+  height: 1.5rem;
   line-height: 1.5rem;
   .border--s(@neutral_silver);
   .borderRadius--top--l;
@@ -14,7 +14,6 @@
   color: @neutral_dark_gray;
   font-family: "Proxima Nova";
   width: 100%;
-  box-sizing: border-box;
 }
 
 .Table2Beta--selectedRowsHeader--actionsFlexbox {
@@ -26,10 +25,7 @@
 }
 
 .Table2Beta--selectedRowsHeader--action {
-  margin: 0.5rem 0.5rem 0 0;
-  cursor: pointer;
-  padding: 0.5rem;
-  border-radius: 0.25rem;
+  margin: 0.5rem 0 0 0;
 }
 
 .Table2Beta--selectedRowsHeader--action:last-of-type {
