--- a/src/MessagingThreadListItem/MessagingThreadListItem.less
+++ b/src/MessagingThreadListItem/MessagingThreadListItem.less
@@ -47,6 +47,7 @@
 
 .ThreadListItem--Timestamp {
   margin-left: auto;
+  margin-right: none;
   .text--nowrap();
   font-size: 0.875rem;
   .text--line-height-1();
@@ -66,6 +67,12 @@
   margin-left: auto;
   // Size is fixed so that the preview text cuts off at the same
   //  point for messages w/ or w/o drafts/new messages indicators
+  width: @size_s;
+}
+
+.ThreadListItem--Indicator--Container--Inline {
+  .flexShrink(0);
+  .margin--left--m();
   width: @size_s;
 }
 
