Actions are always shown by default

--- a/src/Table2Beta/Table.less
+++ b/src/Table2Beta/Table.less
@@ -45,9 +45,13 @@
   background-color: @neutral_off_white;
 }
 
-.Table2Beta--singleActions {
-  visibility: hidden;
+.Table2Beta--singleActions,
+.Table2Beta--singleActions--hidden {
   align-items: center;
+}
+
+.Table2Beta--singleActions--hidden {
+  visibility: hidden;
 }
 
 .Table2Beta--selectable_row:hover {
