Menu button is accessible and is actually a button

--- a/src/Table2Beta/SelectedRowsHeader.less
+++ b/src/Table2Beta/SelectedRowsHeader.less
@@ -18,12 +18,7 @@
 }
 
 .Table2Beta--selectedRowsHeader--actionsFlexbox {
-  display: inline;
-  // flex-wrap: wrap;
-  // margin-top: -1rem;
-  // in the future, replace wth row-gap and column-gap, currently not supported in Safari
-  // row-gap: 1rem;
-  // column-gap: 1.5rem;
+  margin-top: 0.35rem;
 }
 
 .Table2Beta--selectedRowsHeader--action {
