Table2Beta: Bug Bash Bongo! (#552)
* Fix no data scenario

* Select All checkbox now is disabled when there's no data to select

* Select All checkbox, if partially selected, will now clear the selection on the next click

* Potentially moving bulk actions to a second row

* Actions are always shown by default

* Menu button is accessible and is actually a button

* Updated docs and package number

* Make format-all on only Table2Beta

* Ran make format-all. make format-check passes locally

* Selected rows change when a filter is applied

* Ran make format-all after npm install

--- a/src/Table2Beta/SelectedRowsHeader.less
+++ b/src/Table2Beta/SelectedRowsHeader.less
@@ -1,13 +1,11 @@
 @import (reference) "../less/utilities.less";
 
 .Table2Beta--selectedRowsHeader {
-  height: 1.5rem;
   line-height: 1.5rem;
   .border--s(@neutral_silver);
   .borderRadius--top--l;
   border-collapse: collapse;
   .padding--x--m;
-  .padding--y--m;
   .text--medium;
   .text--semi-bold;
   background-color: @neutral_off_white;
@@ -15,12 +13,12 @@
   font-family: "Proxima Nova";
 }
 
+.Table2Beta--selectedRowsHeader--selectedText {
+  .margin--y--m;
+}
+
 .Table2Beta--selectedRowsHeader--actionsFlexbox {
-  flex-wrap: wrap;
-  margin-top: -1rem;
-  // in the future, replace wth row-gap and column-gap, currently not supported in Safari
-  // row-gap: 1rem;
-  // column-gap: 1.5rem;
+  margin-top: 0.35rem;
 }
 
 .Table2Beta--selectedRowsHeader--action {
