Moving the single actions a little bit to the left

--- a/src/Table2Beta/Table.less
+++ b/src/Table2Beta/Table.less
@@ -48,6 +48,7 @@
 .Table2Beta--singleActions,
 .Table2Beta--singleActions--hidden {
   align-items: center;
+  margin-left: -1rem;
 }
 
 .Table2Beta--singleActions--hidden {
