--- a/components/TooltipView.less
+++ b/components/TooltipView.less
@@ -34,7 +34,7 @@
   display: inline-block;
 }
 
-.TooltipView--focusControl {
-  .margin--top--s;
+.TooltipView--accessibilityNotice {
+  .margin--top--m;
   .text--small;
 }
