--- a/src/Table2Beta/Table.less
+++ b/src/Table2Beta/Table.less
@@ -85,6 +85,24 @@
   vertical-align: middle;
 }
 
+.Table2Beta--actions--hoverIcon {
+  display: none;
+  height: 1.5rem;
+  width: 1.25rem;
+  margin-right: 0.3125rem;
+  vertical-align: middle;
+}
+
+.Table2Beta--actions--iconContainer:hover {
+  .Table2Beta--actions--icon {
+    display: none;
+  }
+
+  .Table2Beta--actions--hoverIcon {
+    display: inline-block;
+  }
+}
+
 .Table2Beta--actions--title {
   display: inline-block;
   .text--medium;
