--- a/docs/components/MessagingThreadHistoryView.less
+++ b/docs/components/MessagingThreadHistoryView.less
@@ -17,9 +17,10 @@
 .MessagingThreadHistoryView--config {
   .flexbox;
   .items--center;
-  .margin--bottom--m;
   .text--caps;
   .text--small;
+  .margin--xs();
+  display: inline-block;
 
   &:not(:last-child) {
     .margin--right--m;
