SSOAP-2851 - Change outline of X-to-close on AlertBox as well as plain link Button type outline (on focus,active) to Accent Purple Shade 2, which provides better color contrast in Portal.

--- a/src/AlertBox/AlertBox.less
+++ b/src/AlertBox/AlertBox.less
@@ -94,6 +94,6 @@ h3.AlertBox--title {
   }
 
   &:focus {
-    outline: @borderRadiusM solid @primary_blue_tint_2;
+    outline: @borderRadiusM solid @accent_purple_shade_2;
   }
 }
