--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -170,7 +170,7 @@ button {
     color: @primary_blue_shade_2;
 
     &:focus {
-      outline: @borderRadiusM solid fade(@primary_blue_tint_2, 50%);
+      outline: @borderRadiusM solid @accent_purple_shade_2;
       transition: none;
     }
   }
