Add optional hearingLevel prop to AlertBox

--- a/src/AlertBox/AlertBox.less
+++ b/src/AlertBox/AlertBox.less
@@ -6,7 +6,7 @@
   .border--s(transparent);
 }
 
-h3.AlertBox--title {
+.AlertBox--title {
   .margin--none();
   .margin--bottom--s();
   .padding--none();
