update text style

--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -150,8 +150,9 @@ button {
   }
 
   &.Button--small {
-    .text--small;
-    padding: @size_xs @size_s @size_2xs;
+    font-size: 0.875rem;
+    .text--semi-bold;
+    padding: 0.438rem @size_s @size_2xs;
   }
 
   &.Button--regular {
