--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -152,7 +152,7 @@ button {
   &.Button--small {
     font-size: 0.875rem;
     .text--semi-bold;
-    padding: 0.438rem @size_s @size_2xs;
+    padding: 0.388rem @size_s 0.3rem;
   }
 
   &.Button--regular {
