Add new .text--smallMedium for 14px font size

--- a/src/less/type-size.less
+++ b/src/less/type-size.less
@@ -5,6 +5,7 @@
 @type_tiny: 0.625rem;
 @type_small: @size_s;
 @type_medium: @size_m;
+@type_small_medium: 0.875rem; // 14px
 @type_large: @size_l;
 @type_huge: @size_xl;
 @type_gargantuan: @size_2xl;
@@ -16,6 +17,10 @@
 
 .text--small {
   font-size: @type_small;
+}
+
+.text--smallMedium {
+  font-size: @type_small_medium;
 }
 
 .text--medium {
