--- a/src/less/type-size.less
+++ b/src/less/type-size.less
@@ -4,6 +4,7 @@
 // Type Size Variables
 @type_tiny: 0.625rem;
 @type_small: @size_s;
+@type_small_medium: 0.875rem; // 14px
 @type_medium: @size_m;
 @type_large: @size_l;
 @type_huge: @size_xl;
@@ -16,6 +17,10 @@
 
 .text--small {
   font-size: @type_small;
+}
+
+.text--smallMedium {
+  font-size: @type_small_medium;
 }
 
 .text--medium {
