Add mediumLarge for 18px

--- a/src/less/type-size.less
+++ b/src/less/type-size.less
@@ -6,6 +6,7 @@
 @type_small: @size_s;
 @type_small_medium: 0.875rem; // 14px
 @type_medium: @size_m;
+@type_medium_large: 1.125rem; // 18px
 @type_large: @size_l;
 @type_huge: @size_xl;
 @type_gargantuan: @size_2xl;
@@ -25,6 +26,10 @@
 
 .text--medium {
   font-size: @type_medium;
+}
+
+.text--mediumLarge {
+  font-size: @type_medium_large;
 }
 
 .text--large {
