basic implementation for TextInput2

--- a/src/TextInput2/TextInput2.less
+++ b/src/TextInput2/TextInput2.less
@@ -1,15 +1,84 @@
 @import (reference) "../less/utilities";
 
-.TextInput2 {
-  .border--s(@neutral_silver);
-  .borderRadius--m;
-  .padding--m;
-  background-color: @neutral_off_white;
+.TextInput2--container {
+  font-family: "Proxima Nova";
+
+  .border--s(@neutral_off_white);
 }
 
-.TextInput2--subElement {
+.TextInput2--infoRow {
+  .flexbox();
+  .justify--between();
+  .padding--bottom--2xs();
+
+  color: @neutral_medium_gray;
+  .text--small();
+}
+
+.TextInput2--label {
+  &--error {
+    .text--semi-bold();
+  }
+}
+
+.TextInput2--infoRequirement {
+  .text--italic();
+}
+
+.TextInput2--inputContainer {
+  width: 100%;
+  .inlineFlexbox();
+  .items--baseline();
+  .padding--y--2xs();
   .border--s(@neutral_silver);
-  .padding--s;
+  .borderRadius--l();
   background-color: @neutral_white;
-  text-align: right;
+
+  &:hover {
+    .border--s(@primary_blue);
+  }
+
+  &--error:hover {
+    .border--s(@alert_red);
+  }
+}
+
+.TextInput2--leadingIcon {
+  color: @neutral_medium_gray;
+  .padding--left--xs();
+}
+
+.TextInput2--input {
+  border: none;
+  outline: none;
+  width: 100%;
+  font-family: "Proxima Nova";
+  .text--medium();
+  line-height: @size_l;
+  .padding--left--xs();
+
+  &::placeholder {
+    //&::-webkit-input-placeholder, &::-moz-placeholder, &:-ms-input-placeholder {
+    color: @neutral_gray;
+  }
+
+  &--focused {
+    .border--s(@primary_blue);
+    box-shadow: 0 0 0 @size_2xs ~"@{primary_blue_tint_2}80";
+  }
+
+  &--error {
+    .border--s(@alert_red);
+    box-shadow: 0 0 0 @size_2xs ~"@{alert_red_tint_2}80";
+  }
+}
+
+.TextInput2--helpText {
+  color: @neutral_medium_gray;
+  .text--small();
+  .padding--top--2xs();
+
+  &--error {
+    color: @alert_red;
+  }
 }
