label is required, add hide option
hide option still keeps component available for screen readers

--- a/docs/components/TextInput2View.less
+++ b/docs/components/TextInput2View.less
@@ -20,6 +20,11 @@
   }
 }
 
+.TextInput2View--configText {
+  .text--caps;
+  .text--small;
+}
+
 label.TextInput2View--config {
   cursor: pointer;
 }
