--- a/src/TextInput2/TextInput2.less
+++ b/src/TextInput2/TextInput2.less
@@ -13,11 +13,31 @@
 
   color: @neutral_medium_gray;
   .text--small();
+
+  &--labelHidden {
+    .justify--end();
+  }
 }
 
 .TextInput2--label {
   &--error {
     .text--semi-bold();
+  }
+
+  /*
+    for a11y purposes
+    https://a11y-guidelines.orange.com/en/web/components-examples/accessible-hiding/#
+  */
+  &--hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap; /* added line */
+    border: 0;
   }
 }
 
