use box-sizing: border-box

--- a/src/TextInput2/TextInput2.less
+++ b/src/TextInput2/TextInput2.less
@@ -59,6 +59,7 @@
   .borderRadius--l();
   background-color: @neutral_white;
   .padding--x--xs();
+  box-sizing: border-box;
 
   &--focused {
     box-shadow: 0 0 0 @size_2xs ~"@{primary_blue_tint_2}80";
