--- a/src/TextInput2/TextInput2.less
+++ b/src/TextInput2/TextInput2.less
@@ -82,6 +82,14 @@
   &--error:hover {
     .border--s(@alert_red);
   }
+
+  &--disabled {
+    .border--s(@neutral_silver);
+  }
+
+  &--disabled:hover {
+    .border--s(@neutral_silver);
+  }
 }
 
 .TextInput2--inputContainer--focused.TextInput2--inputContainer--error {
@@ -97,6 +105,10 @@
   font-family: "Proxima Nova";
   .text--medium();
   line-height: @size_l;
+
+  &:disabled {
+    background-color: @neutral_white;
+  }
 
   &::placeholder {
     //&::-webkit-input-placeholder, &::-moz-placeholder, &:-ms-input-placeholder {
