error messaging and custom validation

--- a/src/TextInput2/TextInput2.less
+++ b/src/TextInput2/TextInput2.less
@@ -116,7 +116,7 @@
   }
 }
 
-.TextInput2--helpText {
+.TextInput2--footerText {
   color: @neutral_medium_gray;
   .text--small();
   .padding--top--2xs();
