fix placeholder css selectors

--- a/src/TextInput2/TextInput2.less
+++ b/src/TextInput2/TextInput2.less
@@ -112,7 +112,15 @@
   }
 
   &::placeholder {
-    //&::-webkit-input-placeholder, &::-moz-placeholder, &:-ms-input-placeholder {
+    color: @neutral_gray;
+  }
+  &::-webkit-input-placeholder {
+    color: @neutral_gray;
+  }
+  &::-moz-placeholder {
+    color: @neutral_gray;
+  }
+  &:-ms-input-placeholder {
     color: @neutral_gray;
   }
 }
