rename item -> option to match <select>
also rename Option type fields

--- a/src/MultiSelect/MultiSelect.less
+++ b/src/MultiSelect/MultiSelect.less
@@ -118,7 +118,7 @@
   min-height: @size_2xl;
 }
 
-.MultiSelect--items {
+.MultiSelect--options {
   &--reset {
     outline: none;
     cursor: pointer;
@@ -145,7 +145,7 @@
   }
 }
 
-.MultiSelect--item {
+.MultiSelect--option {
   color: @neutral_dark_gray;
   .borderRadius--l();
   .padding--xs();
@@ -155,7 +155,7 @@
   }
 }
 
-.MultiSelect--itemsNoneFound {
+.MultiSelect--noOptionsFound {
   color: @neutral_gray;
   text-align: center;
   cursor: default;
