--- a/src/Select2/Select2.less
+++ b/src/Select2/Select2.less
@@ -3,6 +3,7 @@
 .Select2--container {
   font-family: "Proxima Nova";
   .text--medium();
+  position: relative;
 }
 
 .Select2--label {
@@ -30,50 +31,86 @@
 }
 
 .Select2--selectContainer {
-  position: relative;
-}
-
-.Select2--button {
-  outline: none;
-  font-family: "Proxima Nova";
   .text--medium();
-  .flexbox();
-  .justify--between();
-  .items--center();
   width: 100%;
-  height: @size_2xl;
-  background-color: @neutral_white;
+  .flexbox();
   .border--m(@neutral_silver);
   .borderRadius--l();
-  .padding--x--m();
+  background-color: @neutral_white;
+  .margin--top--3xs();
+  .padding--left--xs();
   box-sizing: border-box;
   transition: box-shadow @timingQuickly ease-out;
 
-  &--open {
-    .border--m(@primary_blue);
+  &--focused {
     box-shadow: 0 0 0 @size_2xs ~"@{primary_blue_tint_2}80";
+
+    .border--m(@primary_blue);
   }
 
+  /* stylelint-disable-next-line no-descending-specificity */
   &:hover {
     .border--m(@primary_blue);
   }
 }
 
-.Select2--buttonPlaceholder {
-  color: @neutral_gray;
+.Select2--input {
+  border: none;
+  outline: none;
+  .borderRadius--l();
+  width: 100%;
+  font-family: "Proxima Nova";
+  .text--medium();
+  line-height: @size_l;
+
+  &::placeholder {
+    color: @neutral_gray;
+  }
+
+  &::-webkit-input-placeholder {
+    color: @neutral_gray;
+  }
+
+  &::-moz-placeholder {
+    color: @neutral_gray;
+  }
+
+  &:-ms-input-placeholder {
+    color: @neutral_gray;
+  }
 }
 
-.Select2--items {
+.Select2--buttonContainer {
+  .flexbox();
+  .padding--x--s();
+}
+
+.Select2--button--reset {
+  outline: none;
+  border: none;
+  .margin--none();
+  .padding--none();
+  font-family: "Proxima Nova";
+  .text--medium();
+}
+
+.Select2--clearButton {
+  background-color: @neutral_white;
+  min-height: @size_2xl;
+  .margin--right--s();
+}
+
+.Select2--caretButton {
+  background-color: @neutral_white;
+  min-height: @size_2xl;
+}
+
+.Select2--options {
   &--reset {
     outline: none;
-    cursor: pointer;
-    max-height: @size_5xl * 5;
-    width: 100%;
     list-style: none;
     overflow-y: scroll;
-    background-color: @neutral_white;
     .margin--none();
-    .margin--top--xs();
     .padding--none();
     position: absolute;
     box-sizing: border-box;
@@ -81,17 +118,32 @@
   }
 
   &--open {
+    max-height: @size_5xl * 5;
+    width: 100%;
+    .margin--top--xs();
+    background-color: @neutral_white;
     .boxShadow--light();
     .padding--xs();
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   }
 }
 
-.Select2--item {
+.Select2--option {
+  cursor: pointer;
   color: @neutral_dark_gray;
   .borderRadius--l();
   .padding--xs();
 
-  &:hover {
+  &--highlighted {
     background-color: ~"@{primary_blue_tint_2}80";
   }
+}
+
+.Select2--notFound {
+  color: @neutral_gray;
+  text-align: center;
+  cursor: default;
 }
