--- a/docs/components/Select2View.less
+++ b/docs/components/Select2View.less
@@ -14,12 +14,15 @@
   .flexbox;
   .items--center;
   .margin--bottom--m;
-  .text--caps;
-  .text--small;
 
   &:not(:last-child) {
     .margin--right--m;
   }
+}
+
+.Select2View--configLabelText {
+  .text--caps;
+  .text--small;
 }
 
 label.Select2View--config {
