update css for new component view template
to not overwrite TextInput2 styles

--- a/bin/NewComponentView.less
+++ b/bin/NewComponentView.less
@@ -22,6 +22,11 @@
   }
 }
 
+.NewComponentView--configLabelText {
+  .text--caps;
+  .text--small;
+}
+
 label.NewComponentView--config {
   cursor: pointer;
 }
