update MultiSelect docs

--- a/docs/components/MultiSelectView.less
+++ b/docs/components/MultiSelectView.less
@@ -14,12 +14,15 @@
   .flexbox;
   .items--center;
   .margin--bottom--m;
-  .text--caps;
-  .text--small;
 
   &:not(:last-child) {
     .margin--right--m;
   }
+}
+
+.MultiSelectView--configLabelText {
+  .text--caps;
+  .text--small;
 }
 
 label.MultiSelectView--config {
