use less mixins for cross-browser support

--- a/src/Select2/Select2.less
+++ b/src/Select2/Select2.less
@@ -122,8 +122,8 @@
 
 .Select2--errorIcon {
   color: @alert_red;
-  display: flex;
-  align-items: center;
+  .flexbox();
+  .items--center();
 }
 
 .Select2--clearButton {
