--- a/docs/components/MessagingThreadHistoryView.less
+++ b/docs/components/MessagingThreadHistoryView.less
@@ -12,6 +12,7 @@
   .border--top--l(@neutral_silver);
   .margin--top--xl;
   .padding--top--l;
+  justify-content: space-evenly;
 }
 
 .MessagingThreadHistoryView--config {
