add unreadOrbColor prop to MessagingThreadListItem

--- a/src/MessagingThreadListItem/MessagingThreadListItem.less
+++ b/src/MessagingThreadListItem/MessagingThreadListItem.less
@@ -75,3 +75,10 @@
   border-radius: 50%;
   background-color: @primary_blue;
 }
+.ThreadListItem--UnreadOrb.ThreadListItem--UnreadOrb--PrimaryBlue {
+  background-color: @primary_blue;
+}
+
+.ThreadListItem--UnreadOrb.ThreadListItem--UnreadOrb--AccentTeal {
+  background-color: @accent_teal;
+}
