12px -> 16px padding for AlertBox2

--- a/src/AlertBox2/AlertBox2.less
+++ b/src/AlertBox2/AlertBox2.less
@@ -2,7 +2,7 @@
 
 .AlertBox2 {
   .borderRadius--m();
-  .padding--s();
+  .padding--m();
   .flexbox();
   .justify--between();
   .items--center();
