Support full width items in messaging thread history

--- a/src/MessagingThreadHistory/MessageMetadata.less
+++ b/src/MessagingThreadHistory/MessageMetadata.less
@@ -29,6 +29,13 @@
   align-items: center;
 }
 
+.MessageMetadata--Message--fullWidth {
+  .flexbox();
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+}
+
 .MessageMetadata--Timestamp--right {
   color: @neutral_medium_gray;
   font-size: 0.875rem;
