--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -30,7 +30,7 @@
 }
 
 .MessagingBubble--Message--Reply--Other {
-  background-color: #fafbfe; /* stylelint-disable-line */
+  background-color: @neutral_off_white;
   border-radius: 0.3125rem;
   color: @neutral_black;
   .margin--xs()
