fix linting errors + version bump

--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -11,6 +11,7 @@
   white-space: pre-wrap;
   word-wrap: break-word; // IE name for overflow-wrap
 }
+
 .MessagingBubble--Message--Own {
   background-color: @neutral_dark_gray;
   color: @neutral_white;
@@ -26,14 +27,14 @@
   background-color: #636776; /* stylelint-disable-line */
   border-radius: 0.3125rem;
   color: @neutral_white;
-  .margin--xs()
+  .margin--xs();
 }
 
 .MessagingBubble--Message--Reply--Other {
   background-color: @neutral_off_white;
   border-radius: 0.3125rem;
   color: @neutral_black;
-  .margin--xs()
+  .margin--xs();
 }
 
 .MessagingBubble--Link,
