add showNewLabel prop to MessagingThreadListItem

--- a/src/MessagingThreadListItem/MessagingThreadListItem.less
+++ b/src/MessagingThreadListItem/MessagingThreadListItem.less
@@ -69,6 +69,12 @@
   width: @size_s;
 }
 
+.ThreadListItem--NewLabel--Container {
+  .flexShrink(0);
+  margin-left: auto;
+  // todo: Handle width with preview text cutoff, etc;
+}
+
 .ThreadListItem--UnreadOrb {
   height: @size_xs;
   width: @size_xs;
