--- a/docs/components/MessagingInputView.less
+++ b/docs/components/MessagingInputView.less
@@ -43,3 +43,11 @@ label.MessagingInputView--config {
 .MessagingInputView--props {
   .margin--top--l;
 }
+
+.MessagingInputView--reply {
+  .padding--left--2xl();
+  .padding--right--2xl();
+  .padding--top--s();
+  .padding--bottom--s();
+  .boxShadow--light();
+}
