--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -14,12 +14,46 @@
   .margin--right--xs();
 }
 
-.MessagingInput--Reply {
+.MessagingInput--Reply--Container {
   align-items: center;
   justify-content: center;
   .border--m(@neutral_silver);
   border-bottom: none;
   .padding--xs();
+}
+
+.MessagingInput--Reply--Content {
+  position: relative;
+}
+
+.MessagingInput--Reply--CloseButton {
+  position: absolute;
+  top: -0.5rem;
+  right: -0.5rem;
+  .padding--2xs();
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: @neutral_silver;
+  color: @neutral_dark_gray;
+  border: none;
+
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: @neutral_gray;
+    color: @neutral_off_white;
+  }
+}
+
+.MessagingInput--Reply--CloseIcon {
+  // covers possible range of FA sizes
+  min-width: 1em;
+  min-height: 1em;
+  max-width: 2em;
+  max-height: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .MessagingInput--TextFieldLabel {
