address PR comments + tweak styling

--- a/components/MessagingInputView.less
+++ b/components/MessagingInputView.less
@@ -50,4 +50,7 @@ label.MessagingInputView--config {
   .padding--top--s();
   .padding--bottom--s();
   .boxShadow--light();
+  max-width: none !important;
+  max-height: none !important;
+  font-size: 1rem;
 }
