fix missing margin call

--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -39,8 +39,7 @@
   background-color: @neutral_off_white;
   border-radius: 0.3125rem;
   color: @neutral_black;
-  .margin--xs();
-  .margin--left--none();
+  .margin--bottom--s();
 }
 
 .MessagingBubble--Link,
