fix overflow issues in messaging input

--- a/src/MessagingInput/MessagingInput.less
+++ b/src/MessagingInput/MessagingInput.less
@@ -12,6 +12,7 @@
 .MessagingInput--InnerContainer--Content {
   width: 100%;
   .margin--right--xs();
+  overflow-y: auto;
 }
 
 .MessagingInput--Reply--Container {
@@ -22,7 +23,7 @@
   /* stylelint-disable */
   max-height: 200px;
   /* stylelint-enable */
-  overflow-y: scroll;
+  overflow-y: auto;
   scroll-padding-bottom: 1rem;
 }
 
