fix linting errors

--- a/src/AnnouncementBubble/NormalAnnouncementBubble.less
+++ b/src/AnnouncementBubble/NormalAnnouncementBubble.less
@@ -83,6 +83,7 @@ button.NormalAnnouncementBubble--menuIconContainer {
 }
 
 button.NormalAnnouncementBubble--replyButton {
+  /* stylelint-disable-next-line declaration-property-value-whitelist */
   background-color: #ffdf7f;
   border: 0;
   border-radius: 1.5rem;
@@ -100,6 +101,7 @@ button.NormalAnnouncementBubble--replyButton {
   &:hover,
   &:focus,
   &:active {
+    /* stylelint-disable-next-line declaration-property-value-whitelist */
     background-color: #fed559;
   }
 }
